# 3D-Graphics-Renderer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
src/: camera.h  glad.c  main.cpp  shader.h
src/shaders/: fshader.txt  lightfshader.txt  skyfshader.txt  skyvshader.txt  vshader.txt
